sdks/swift/Sources/CGoudEngine/include/goud_engine.h

typedef struct Option_CollisionCallback Option_CollisionCallback;
/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-safe entity identifier.
 */
typedef uint64_t GoudEntityId;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/* === ECS === */

/**
 * Checks if an entity has a specific component.
 */
bool goud_component_has(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Gets a read-only pointer to a component on an entity.
 */
const uint8_t *goud_component_get(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Gets a mutable pointer to a component on an entity.
 */
uint8_t *goud_component_get_mut(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/**
 * Adds the same component type to multiple entities in a single batch.
 */
uint32_t goud_component_add_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash, const uint8_t *data_ptr, size_t component_size);
/**
 * Removes the same component type from multiple entities in a single batch.
 */
uint32_t goud_component_remove_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash);
/**
 * Checks if multiple entities have a specific component type.
 */
uint32_t goud_component_has_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint64_t type_id_hash, uint8_t *out_results);
/**
 * Registers a component type with the engine.
 */
bool goud_component_register_type(uint64_t type_id_hash, const uint8_t *name_ptr, size_t name_len, size_t size, size_t align);
/**
 * Adds a component to an entity.
 */
GoudResult goud_component_add(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash, const uint8_t *data_ptr, size_t data_size);
/**
 * Removes a component from an entity.
 */
GoudResult goud_component_remove(struct GoudContextId context_id, GoudEntityId entity_id, uint64_t type_id_hash);
/* === Physics === */

/**
 * Creates a rigid body in the 2D physics world.
 */
int64_t goud_physics_add_rigid_body(struct GoudContextId ctx, uint32_t body_type, float x, float y, float gravity_scale);
/**
 * Creates a rigid body in the 2D physics world with explicit CCD control.
 */
int64_t goud_physics_add_rigid_body_ex(struct GoudContextId ctx, uint32_t body_type, float x, float y, float gravity_scale, bool ccd_enabled);
/**
 * Removes a rigid body from the 2D physics world.
 */
int32_t goud_physics_remove_body(struct GoudContextId ctx, uint64_t handle);
/**
 * Creates a joint between two rigid bodies in the 2D physics world.
 */
int64_t goud_physics_create_joint(struct GoudContextId ctx, uint64_t body_a, uint64_t body_b, uint32_t joint_kind, float anchor_ax, float anchor_ay, float anchor_bx, float anchor_by, float axis_x, float axis_y, bool use_limits, float limit_min, float limit_max, bool use_motor, float motor_target_velocity, float motor_max_force);
/**
 * Removes a joint from the 2D physics world.
 */
int32_t goud_physics_remove_joint(struct GoudContextId ctx, uint64_t handle);
/**
 * Attaches a collider to a rigid body.
 */
int64_t goud_physics_add_collider(struct GoudContextId ctx, uint64_t body_handle, uint32_t shape_type, float width, float height, float radius, float friction, float restitution);
/**
 * Creates a 2D physics provider for the given context with initial gravity.
 */
int32_t goud_physics_create(struct GoudContextId ctx, float gx, float gy);
/**
 * Creates a 2D physics provider for the given context with explicit backend.
 */
int32_t goud_physics_create_with_backend(struct GoudContextId ctx, float gx, float gy, uint32_t backend);
/**
 * Destroys the 2D physics provider for the given context.
 */
int32_t goud_physics_destroy(struct GoudContextId ctx);
/**
 * Sets the gravity vector for the 2D physics provider.
 */
int32_t goud_physics_set_gravity(struct GoudContextId ctx, float x, float y);
/**
 * Steps the 2D physics simulation by `dt` seconds.
 */
int32_t goud_physics_step(struct GoudContextId ctx, float dt);
/**
 * Writes the position of a body into the provided output pointers.
 */
int32_t goud_physics_get_position(struct GoudContextId ctx, uint64_t handle, float *out_x, float *out_y);
/**
 * Writes the velocity of a body into the provided output pointers.
 */
int32_t goud_physics_get_velocity(struct GoudContextId ctx, uint64_t handle, float *out_x, float *out_y);
/**
 * Sets the linear velocity of a body.
 */
int32_t goud_physics_set_velocity(struct GoudContextId ctx, uint64_t handle, float vx, float vy);
/**
 * Applies a force to a body (accumulated over the frame).
 */
int32_t goud_physics_apply_force(struct GoudContextId ctx, uint64_t handle, float fx, float fy);
/**
 * Applies an instantaneous impulse to a body.
 */
int32_t goud_physics_apply_impulse(struct GoudContextId ctx, uint64_t handle, float ix, float iy);
/**
 * Casts a ray and writes the hit point into the provided output pointers.
 */
int32_t goud_physics_raycast(struct GoudContextId ctx, float ox, float oy, float dx, float dy, float max_dist, float *out_hit_x, float *out_hit_y);
/**
 * Registers or clears a per-context collision callback.
 */
int32_t goud_physics_set_collision_callback(struct GoudContextId ctx, struct Option_CollisionCallback callback, void *user_data);
/**
 * Returns the number of filtered collision events captured by the last
 */
int32_t goud_physics_collision_events_count(struct GoudContextId ctx);
/**
 * Backward-compatible alias for `goud_physics_collision_events_count`.
 */
int32_t goud_physics_collision_event_count(struct GoudContextId ctx);
/**
 * Reads one filtered collision event by index.
 */
int32_t goud_physics_collision_events_read(struct GoudContextId ctx, uint32_t index, uint64_t *out_body_a, uint64_t *out_body_b, uint32_t *out_kind);
/**
 * Backward-compatible alias for `goud_physics_collision_events_read`.
 */
int32_t goud_physics_collision_event_read(struct GoudContextId ctx, uint32_t index, uint64_t *out_body_a, uint64_t *out_body_b, uint32_t *out_kind);
/**
 * Attaches a collider with explicit sensor/layer/mask filtering data.
 */
int64_t goud_physics_add_collider_ex(struct GoudContextId ctx, uint64_t body_handle, uint32_t shape_type, float width, float height, float radius, float friction, float restitution, bool is_sensor, uint32_t layer, uint32_t mask);
/**
 * Casts a filtered ray and returns full hit payload.
 */
int32_t goud_physics_raycast_ex(struct GoudContextId ctx, float ox, float oy, float dx, float dy, float max_dist, uint32_t layer_mask, uint64_t *out_body_handle, uint64_t *out_collider_handle, float *out_hit_x, float *out_hit_y, float *out_normal_x, float *out_normal_y, float *out_distance);
/**
 * Gets the current gravity vector for the 2D physics world.
 */
int32_t goud_physics_get_gravity(struct GoudContextId ctx, float *out_x, float *out_y);
/**
 * Sets the gravity scale for a rigid body.
 */
int32_t goud_physics_set_body_gravity_scale(struct GoudContextId ctx, uint64_t handle, float scale);
/**
 * Gets the gravity scale for a rigid body.
 */
int32_t goud_physics_get_body_gravity_scale(struct GoudContextId ctx, uint64_t handle, float *out_scale);
/**
 * Sets the friction coefficient for a collider.
 */
int32_t goud_physics_set_collider_friction(struct GoudContextId ctx, uint64_t handle, float friction);
/**
 * Gets the friction coefficient for a collider.
 */
int32_t goud_physics_get_collider_friction(struct GoudContextId ctx, uint64_t handle, float *out_friction);
/**
 * Sets the restitution (bounciness) for a collider.
 */
int32_t goud_physics_set_collider_restitution(struct GoudContextId ctx, uint64_t handle, float restitution);
/**
 * Gets the restitution (bounciness) for a collider.
 */
int32_t goud_physics_get_collider_restitution(struct GoudContextId ctx, uint64_t handle, float *out_restitution);
/**
 * Sets the fixed timestep for the 2D physics simulation.
 */
int32_t goud_physics_set_timestep(struct GoudContextId ctx, float dt);
/**
 * Gets the current fixed timestep for the 2D physics simulation.
 */
int32_t goud_physics_get_timestep(struct GoudContextId ctx, float *out_dt);
/* === Error === */

/**
 * Clears the last error on the current thread.
 */
void goud_clear_last_error(void);
/**
 * Returns the recovery classification for an error code.
 */
int32_t goud_error_recovery_class(GoudErrorCode code);
/**
 * Writes the recovery hint for an error code into a caller-provided buffer.
 */
int32_t goud_error_recovery_hint(GoudErrorCode code, uint8_t *buf, size_t buf_len);
/**
 * Enables or disables diagnostic mode.
 */
void goud_diagnostic_set_enabled(bool enabled);
/**
 * Returns whether diagnostic mode is currently enabled.
 */
bool goud_diagnostic_is_enabled(void);
/**
 * Writes the last captured diagnostic backtrace into a caller-provided buffer.
 */
int32_t goud_diagnostic_last_backtrace(uint8_t *buf, size_t buf_len);
/**
 * Returns the error code of the last error on the current thread.
 */
GoudErrorCode goud_last_error_code(void);
/**
 * Writes the last error message into a caller-provided buffer.
 */
int32_t goud_last_error_message(uint8_t *buf, size_t buf_len);
/**
 * Writes the last error's subsystem into a caller-provided buffer.
 */
int32_t goud_last_error_subsystem(uint8_t *buf, size_t buf_len);
/**
 * Writes the last error's operation into a caller-provided buffer.
 */
int32_t goud_last_error_operation(uint8_t *buf, size_t buf_len);