sdks/python/goud_engine/generated/_ffi.py


    # component_generic
    _lib.goud_component_register_type.argtypes = [ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.c_size_t, ctypes.c_size_t]
    _lib.goud_component_register_type.restype = ctypes.c_bool
    _lib.goud_component_add.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_component_add.restype = GoudResult
    _lib.goud_component_remove.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint64]
    _lib.goud_component_remove.restype = GoudResult
    _lib.goud_component_has.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint64]
    _lib.goud_component_has.restype = ctypes.c_bool
    _lib.goud_component_get.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint64]
    _lib.goud_component_get.restype = ctypes.POINTER(ctypes.c_uint8)
    _lib.goud_component_get_mut.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint64]
    _lib.goud_component_get_mut.restype = ctypes.POINTER(ctypes.c_uint8)
    _lib.goud_component_add_batch.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint64), ctypes.c_uint32, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_component_add_batch.restype = ctypes.c_uint32
    _lib.goud_component_remove_batch.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint64), ctypes.c_uint32, ctypes.c_uint64]
    _lib.goud_component_remove_batch.restype = ctypes.c_uint32
    _lib.goud_component_has_batch.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint64), ctypes.c_uint32, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8)]
    _lib.goud_component_has_batch.restype = ctypes.c_uint32

    # error
    _lib.goud_last_error_code.argtypes = []
    _lib.goud_last_error_code.restype = ctypes.c_uint64
    _lib.goud_last_error_message.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_last_error_message.restype = ctypes.c_int32
    _lib.goud_clear_last_error.argtypes = []
    _lib.goud_clear_last_error.restype = None
    _lib.goud_last_error_subsystem.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_last_error_subsystem.restype = ctypes.c_int32
    _lib.goud_last_error_operation.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_last_error_operation.restype = ctypes.c_int32
    _lib.goud_error_recovery_class.argtypes = [ctypes.c_uint64]
    _lib.goud_error_recovery_class.restype = ctypes.c_int32
    _lib.goud_error_recovery_hint.argtypes = [ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_error_recovery_hint.restype = ctypes.c_int32

    # diagnostic
    _lib.goud_diagnostic_set_enabled.argtypes = [ctypes.c_bool]
    _lib.goud_diagnostic_set_enabled.restype = None
    _lib.goud_diagnostic_is_enabled.argtypes = []
    _lib.goud_diagnostic_is_enabled.restype = ctypes.c_bool
    _lib.goud_diagnostic_last_backtrace.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_diagnostic_last_backtrace.restype = ctypes.c_int32

    # physics2d
    try:
        _lib.goud_physics_create.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics_create.restype = ctypes.c_int32
        _lib.goud_physics_create_with_backend.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_uint32]
        _lib.goud_physics_create_with_backend.restype = ctypes.c_int32
        _lib.goud_physics_destroy.argtypes = [GoudContextId]
        _lib.goud_physics_destroy.restype = ctypes.c_int32
        _lib.goud_physics_set_gravity.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics_set_gravity.restype = ctypes.c_int32
        _lib.goud_physics_add_rigid_body.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics_add_rigid_body.restype = ctypes.c_int64
        _lib.goud_physics_add_rigid_body_ex.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_bool]
        _lib.goud_physics_add_rigid_body_ex.restype = ctypes.c_int64
        _lib.goud_physics_add_collider.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics_add_collider.restype = ctypes.c_int64
        _lib.goud_physics_add_collider_ex.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_bool, ctypes.c_uint32, ctypes.c_uint32]
        _lib.goud_physics_add_collider_ex.restype = ctypes.c_int64
        _lib.goud_physics_remove_body.argtypes = [GoudContextId, ctypes.c_uint64]
        _lib.goud_physics_remove_body.restype = ctypes.c_int32
        _lib.goud_physics_create_joint.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint64, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_bool, ctypes.c_float, ctypes.c_float, ctypes.c_bool, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics_create_joint.restype = ctypes.c_int64
        _lib.goud_physics_remove_joint.argtypes = [GoudContextId, ctypes.c_uint64]
        _lib.goud_physics_remove_joint.restype = ctypes.c_int32
        _lib.goud_physics_step.argtypes = [GoudContextId, ctypes.c_float]
        _lib.goud_physics_step.restype = ctypes.c_int32
        _lib.goud_physics_get_position.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_get_position.restype = ctypes.c_int32
        _lib.goud_physics_get_velocity.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_get_velocity.restype = ctypes.c_int32
        _lib.goud_physics_set_velocity.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics_set_velocity.restype = ctypes.c_int32
        _lib.goud_physics_apply_force.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics_apply_force.restype = ctypes.c_int32
        _lib.goud_physics_apply_impulse.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float]
        _lib.goud_physics_apply_impulse.restype = ctypes.c_int32
        _lib.goud_physics_raycast.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_raycast.restype = ctypes.c_int32
        _lib.goud_physics_raycast_ex.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_raycast_ex.restype = ctypes.c_int32
        _lib.goud_physics_collision_events_count.argtypes = [GoudContextId]
        _lib.goud_physics_collision_events_count.restype = ctypes.c_int32
        _lib.goud_physics_collision_event_count.argtypes = [GoudContextId]
        _lib.goud_physics_collision_event_count.restype = ctypes.c_int32
        _lib.goud_physics_collision_events_read.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_uint32)]
        _lib.goud_physics_collision_events_read.restype = ctypes.c_int32
        _lib.goud_physics_collision_event_read.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_uint32)]
        _lib.goud_physics_collision_event_read.restype = ctypes.c_int32
        _lib.goud_physics_set_collision_callback.argtypes = [GoudContextId, ctypes.c_void_p, ctypes.c_void_p]
        _lib.goud_physics_set_collision_callback.restype = ctypes.c_int32
        _lib.goud_physics_get_gravity.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_get_gravity.restype = ctypes.c_int32
        _lib.goud_physics_set_body_gravity_scale.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
        _lib.goud_physics_set_body_gravity_scale.restype = ctypes.c_int32
        _lib.goud_physics_get_body_gravity_scale.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_get_body_gravity_scale.restype = ctypes.c_int32
        _lib.goud_physics_set_collider_friction.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
        _lib.goud_physics_set_collider_friction.restype = ctypes.c_int32
        _lib.goud_physics_get_collider_friction.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_get_collider_friction.restype = ctypes.c_int32
        _lib.goud_physics_set_collider_restitution.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
        _lib.goud_physics_set_collider_restitution.restype = ctypes.c_int32
        _lib.goud_physics_get_collider_restitution.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_get_collider_restitution.restype = ctypes.c_int32
        _lib.goud_physics_set_timestep.argtypes = [GoudContextId, ctypes.c_float]
        _lib.goud_physics_set_timestep.restype = ctypes.c_int32
        _lib.goud_physics_get_timestep.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float)]
        _lib.goud_physics_get_timestep.restype = ctypes.c_int32
    except AttributeError:
        pass  # feature not compiled in
